1-patterns-deployment/aws/vpc-network.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: VPC network with 2 private subnets, 1 public subnet, and a NAT Gateway

Parameters:
  InstanceName:
    Type: String
    Description: Base name for VPC/network resources

  VpcCidr:
    Type: String
    Description: CIDR block for the VPC
    Default: 10.0.0.0/16

  PrivateSubnetACidr:
    Type: String
    Description: CIDR block for private subnet A
    Default: 10.0.11.0/24

  PrivateSubnetBCidr:
    Type: String
    Description: CIDR block for private subnet B
    Default: 10.0.12.0/24

  PublicSubnetACidr:
    Type: String
    Description: CIDR block for public subnet A (hosts the NAT Gateway)
    Default: 10.0.1.0/24

Resources:
  Vpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCidr
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Sub ${InstanceName}-vpc

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub ${InstanceName}-igw

  VpcGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref Vpc
      InternetGatewayId: !Ref InternetGateway

  PublicSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      CidrBlock: !Ref PublicSubnetACidr
      AvailabilityZone: !Select [0, !GetAZs '']
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub ${InstanceName}-public-subnet-a

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: !Sub ${InstanceName}-public-rt

  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: VpcGatewayAttachment
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnetARouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicSubnetA
      RouteTableId: !Ref PublicRouteTable

  NatGatewayEip:
    Type: AWS::EC2::EIP
    DependsOn: VpcGatewayAttachment
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: !Sub ${InstanceName}-nat-eip

  NatGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatGatewayEip.AllocationId
      SubnetId: !Ref PublicSubnetA
      Tags:
        - Key: Name
          Value: !Sub ${InstanceName}-nat-gw

  PrivateSubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      CidrBlock: !Ref PrivateSubnetACidr
      AvailabilityZone: !Select [0, !GetAZs '']
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${InstanceName}-private-subnet-a

  PrivateSubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      CidrBlock: !Ref PrivateSubnetBCidr
      AvailabilityZone: !Select [1, !GetAZs '']
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub ${InstanceName}-private-subnet-b

  PrivateRouteTableA:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: !Sub ${InstanceName}-private-rt-a

  PrivateRouteTableB:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
      Tags:
        - Key: Name
          Value: !Sub ${InstanceName}-private-rt-b

  PrivateSubnetARouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnetA
      RouteTableId: !Ref PrivateRouteTableA

  PrivateSubnetBRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PrivateSubnetB
      RouteTableId: !Ref PrivateRouteTableB

  PrivateRouteA:
    Type: AWS::EC2::Route
    DependsOn: NatGateway
    Properties:
      RouteTableId: !Ref PrivateRouteTableA
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway

  PrivateRouteB:
    Type: AWS::EC2::Route
    DependsOn: NatGateway
    Properties:
      RouteTableId: !Ref PrivateRouteTableB
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NatGateway

  S3GatewayEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcId: !Ref Vpc
      ServiceName: !Sub com.amazonaws.${AWS::Region}.s3
      VpcEndpointType: Gateway
      RouteTableIds:
        - !Ref PrivateRouteTableA
        - !Ref PrivateRouteTableB

  VpcEndpointSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow HTTPS from within VPC to interface endpoints
      VpcId: !Ref Vpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: !Ref VpcCidr
      SecurityGroupEgress: []
      Tags:
        - Key: Name
          Value: !Sub ${InstanceName}-vpce-sg

  SsmEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcId: !Ref Vpc
      ServiceName: !Sub com.amazonaws.${AWS::Region}.ssm
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      SubnetIds:
        - !Ref PrivateSubnetA
        - !Ref PrivateSubnetB
      SecurityGroupIds:
        - !Ref VpcEndpointSecurityGroup

  SsmMessagesEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcId: !Ref Vpc
      ServiceName: !Sub com.amazonaws.${AWS::Region}.ssmmessages
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      SubnetIds:
        - !Ref PrivateSubnetA
        - !Ref PrivateSubnetB
      SecurityGroupIds:
        - !Ref VpcEndpointSecurityGroup

  Ec2MessagesEndpoint:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      VpcId: !Ref Vpc
      ServiceName: !Sub com.amazonaws.${AWS::Region}.ec2messages
      VpcEndpointType: Interface
      PrivateDnsEnabled: true
      SubnetIds:
        - !Ref PrivateSubnetA
        - !Ref PrivateSubnetB
      SecurityGroupIds:
        - !Ref VpcEndpointSecurityGroup

Outputs:
  VpcId:
    Description: Created VPC ID
    Value: !Ref Vpc
    Export:
      Name: !Sub '${InstanceName}-vpc-id'

  VpcCidr:
    Description: VPC CIDR block
    Value: !GetAtt Vpc.CidrBlock
    Export:
      Name: !Sub '${InstanceName}-vpc-cidr'

  PrivateSubnetAId:
    Description: Private subnet A ID
    Value: !Ref PrivateSubnetA
    Export:
      Name: !Sub '${InstanceName}-private-subnet-a-id'

  PrivateSubnetBId:
    Description: Private subnet B ID
    Value: !Ref PrivateSubnetB
    Export:
      Name: !Sub '${InstanceName}-private-subnet-b-id'

  PrivateRouteTableAId:
    Description: Private route table A ID
    Value: !Ref PrivateRouteTableA
    Export:
      Name: !Sub '${InstanceName}-private-rt-a-id'

  PrivateRouteTableBId:
    Description: Private route table B ID
    Value: !Ref PrivateRouteTableB
    Export:
      Name: !Sub '${InstanceName}-private-rt-b-id'
  
  S3GatewayEndpointId:
    Description: S3 Gateway VPC Endpoint ID
    Value: !Ref S3GatewayEndpoint
    Export:
      Name: !Sub '${InstanceName}-s3-gateway-endpoint-id'


  VpcEndpointSecurityGroupId:
    Description: Security group ID for VPC interface endpoints
    Value: !Ref VpcEndpointSecurityGroup
    Export:
      Name: !Sub '${InstanceName}-vpce-sg-id'

  PublicSubnetAId:
    Description: Public subnet A ID
    Value: !Ref PublicSubnetA
    Export:
      Name: !Sub '${InstanceName}-public-subnet-a-id'

  NatGatewayId:
    Description: NAT Gateway ID
    Value: !Ref NatGateway
    Export:
      Name: !Sub '${InstanceName}-nat-gw-id'

  NatGatewayEip:
    Description: Elastic IP address of the NAT Gateway
    Value: !Ref NatGatewayEip
    Export:
      Name: !Sub '${InstanceName}-nat-eip'
